--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
     </main>
 
-    <script src="scripts/main.js"></script>
-    <script src="scripts/api.js"></script>
+    <script type="module" src="scripts/main.js"></script>
+    <script type="module" src="scripts/api.js"></script>
+
   </body>
 </html>
